# MathToolbox

./: .gitignore  CMakeLists.txt
include/: BinaryTree.h  Calculator.h  math_parser.h  utils.h
src/: BinaryTree.cpp  Calculator.cpp  main.cpp  math_parser.cpp
